fix overflow on left container

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,8 @@
   a {
     @apply text-blue-300 underline;
   }
+
+  pre {
+    @apply whitespace-pre-wrap
+  }
 }
